<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/btm_bookings"
        android:icon="@drawable/bookings_icon"
        android:title="My Bookings" />
    <item
        android:id="@+id/btm_home"
        android:icon="@drawable/home_icon"
        android:title="Home" />
    <item
        android:id="@+id/btm_profile"
        android:icon="@drawable/account_icon"
        android:title="My Profile" />
</menu>