...
                    android:layout_height="140dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:onClick="chooseOrdertype"
                    android:id="@+id/tst"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
...
